2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	* pychecker/warn.py:
	  Note where test44 seems to fail.  Can't figure out how
	  to fix it yet though.
	  Add more comments.
	  Reorder a function to be more clear to follow.

2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Implement DELETE_SLICE3.  ./test_check.sh no longer
	  triggers dispatch errors.

2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Implement SLICE0 and YIELD_VALUE.

2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/pychecker:
	  Adding a script to be used as the pychecker binary when
	  running uninstalled.
	* misc/pychecker-uninstalled:
	  Add a script to run pychecker uninstalled.

2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Implement STORE_MAP dispatcher.
	  Fixes test/test_dict.py

2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	* pychecker/checker.py:
	* pychecker/utils.py:
	  Further documentation and commenting.

2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	* pychecker/Warning.py:
	* pychecker/utils.py:
	* pychecker/warn.py:
	  Add comments and docstrings as I learn.

2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	* pychecker/warn.py:
	  raise NotImplementedError where we actually have the
	  opcode.

2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Add opcodes from 2.5 and 2.6

2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/test_stdlib.py:
	  For now, return OK if we can't import zope.interface,
	  since there is no skip support in the standard unittest.

2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* HACKING: